// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders modal - with options 1`] = `
<div>
  <div
    className="full-screen-modal category-title"
  >
    <label
      className="control-label"
      htmlFor={undefined}
    >
      Upload to data.world
    </label>
  </div>
  <div
    className="upload-modal full-screen-modal   container"
  >
    <div
      className="center-block row"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
            htmlFor={undefined}
          >
            Select the area or sheet to save:
          </label>
          <div
            className="selection-form"
            onClick={undefined}
          >
            <div
              className="selection"
            >
              <label
                className="radio-button"
              >
                <input
                  checked={true}
                  name="selection"
                  readOnly={true}
                  type="radio"
                  value="selection"
                />
                <span>
                  Selection
                </span>
              </label>
              <div
                className="selection-info"
              >
                (4 Rows x 2 Columns)
              </div>
            </div>
            <div
              className="selection"
            >
              <label
                className="radio-button"
              >
                <input
                  checked={undefined}
                  name="selection"
                  readOnly={true}
                  type="radio"
                  value="sheet"
                />
                <span>
                  Sheet
                </span>
              </label>
              <div
                className="selection-info"
              >
                (Sheet1)
              </div>
            </div>
          </div>
        </div>
        <div
          className="url-group form-group"
        >
          <div
            className="body"
          >
            <label
              className="control-label"
              htmlFor={undefined}
            >
              Dataset or project URL:
            </label>
            <span
              className="input-group"
            >
              <div
                className="url"
              >
                <input
                  className="textField form-control"
                  id={undefined}
                  onChange={[Function]}
                  placeholder="https://data.world/"
                  type="text"
                  value={undefined}
                />
                <button
                  className="browse-button btn btn-default"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Browse
                </button>
              </div>
            </span>
            <span
              className="help-block help-block"
            >
              Copy/paste the URL of a dataset or project, or click "Browse"
            </span>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label"
            htmlFor={undefined}
          >
            File name:
          </label>
          <span
            className="input-group"
          >
            <input
              className="textField form-control"
              id={undefined}
              onChange={[Function]}
              type="text"
              value=""
            />
          </span>
          <span
            className="help-block"
          >
            Must not include slashes, your file will be named 
            <strong>
              
              .csv
            </strong>
            <div
              className="titleLimit"
            >
              max. 128
            </div>
          </span>
        </div>
        <div
          className="button-group"
        >
          <button
            className="cancel-button btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
          <button
            className="submit-button btn btn-primary"
            disabled={true}
            type="submit"
          >
            Save file
          </button>
        </div>
      </form>
    </div>
    <div
      className="static-modal"
    />
  </div>
</div>
`;

exports[`renders modal - with range 1`] = `
<div>
  <div
    className="full-screen-modal category-title"
  >
    <label
      className="control-label"
      htmlFor={undefined}
    >
      Upload to data.world
    </label>
  </div>
  <div
    className="upload-modal full-screen-modal   container"
  >
    <div
      className="center-block row"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
            htmlFor={undefined}
          >
            Select the area or sheet to save:
          </label>
          <div
            className="selection-form"
            onClick={undefined}
          >
            <div
              className="selection"
            >
              <label
                className="radio-button"
              >
                <input
                  checked={true}
                  name="selection"
                  readOnly={true}
                  type="radio"
                  value="selection"
                />
                <span>
                  Selection
                </span>
              </label>
              <div
                className="selection-info"
              >
                (4 Rows x 2 Columns)
              </div>
            </div>
            <div
              className="selection"
            >
              <label
                className="radio-button"
              >
                <input
                  checked={undefined}
                  name="selection"
                  readOnly={true}
                  type="radio"
                  value="sheet"
                />
                <span>
                  Sheet
                </span>
              </label>
              <div
                className="selection-info"
              >
                (Sheet1)
              </div>
            </div>
          </div>
        </div>
        <div
          className="url-group form-group"
        >
          <div
            className="body"
          >
            <label
              className="control-label"
              htmlFor={undefined}
            >
              Dataset or project URL:
            </label>
            <span
              className="input-group"
            >
              <div
                className="url"
              >
                <input
                  className="textField form-control"
                  id={undefined}
                  onChange={[Function]}
                  placeholder="https://data.world/"
                  type="text"
                  value={undefined}
                />
                <button
                  className="browse-button btn btn-default"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Browse
                </button>
              </div>
            </span>
            <span
              className="help-block help-block"
            >
              Copy/paste the URL of a dataset or project, or click "Browse"
            </span>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label"
            htmlFor={undefined}
          >
            File name:
          </label>
          <span
            className="input-group"
          >
            <input
              className="textField form-control"
              id={undefined}
              onChange={[Function]}
              type="text"
              value=""
            />
          </span>
          <span
            className="help-block"
          >
            Must not include slashes, your file will be named 
            <strong>
              
              .csv
            </strong>
            <div
              className="titleLimit"
            >
              max. 128
            </div>
          </span>
        </div>
        <div
          className="button-group"
        >
          <button
            className="cancel-button btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
          <button
            className="submit-button btn btn-primary"
            disabled={true}
            type="submit"
          >
            Save file
          </button>
        </div>
      </form>
    </div>
    <div
      className="static-modal"
    />
  </div>
</div>
`;

exports[`renders modal 1`] = `
<div>
  <div
    className="full-screen-modal category-title"
  >
    <label
      className="control-label"
      htmlFor={undefined}
    >
      Upload to data.world
    </label>
  </div>
  <div
    className="upload-modal full-screen-modal   container"
  >
    <div
      className="center-block row"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="url-group form-group"
        >
          <div
            className="body"
          >
            <label
              className="control-label"
              htmlFor={undefined}
            >
              Dataset or project URL:
            </label>
            <span
              className="input-group"
            >
              <div
                className="url"
              >
                <input
                  className="textField form-control"
                  id={undefined}
                  onChange={[Function]}
                  placeholder="https://data.world/"
                  type="text"
                  value={undefined}
                />
                <button
                  className="browse-button btn btn-default"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Browse
                </button>
              </div>
            </span>
            <span
              className="help-block help-block"
            >
              Copy/paste the URL of a dataset or project, or click "Browse"
            </span>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label"
            htmlFor={undefined}
          >
            File name:
          </label>
          <span
            className="input-group"
          >
            <input
              className="textField form-control"
              id={undefined}
              onChange={[Function]}
              type="text"
              value=""
            />
          </span>
          <span
            className="help-block"
          >
            Must not include slashes, your file will be named 
            <strong>
              
              .csv
            </strong>
            <div
              className="titleLimit"
            >
              max. 128
            </div>
          </span>
        </div>
        <div
          className="button-group"
        >
          <button
            className="cancel-button btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
          <button
            className="submit-button btn btn-primary"
            disabled={true}
            type="submit"
          >
            Save file
          </button>
        </div>
      </form>
    </div>
    <div
      className="static-modal"
    />
  </div>
</div>
`;
